src/test/resources/semantic/custom/reject/assignmentFromUndeclaredLiteral.ul
void main() {
}

void foo() {
    int foo;
    foo = bar;
}
